<resources>
    <string name="app_name">ADventure</string>
    <string name="pts_string">Pts.</string>
    <string name="partner">"Partnered with "</string>
    <string name="event_start">"Starts on "</string>
    <string name="event_end">"Ends on "</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
