<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

    </android.support.design.widget.NavigationView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".HomeActivity">

        <include layout="@layout/event_banner"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="5"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/event_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="Jollibee Champ"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partner"/>

                <TextView
                    android:id="@+id/event_partner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jollibee"/>
            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Look for Jollibee Champ ads and get +100 points"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_start"/>

                <TextView
                    android:id="@+id/event_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DD/MM"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_end"/>

                <TextView
                    android:id="@+id/event_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DD/MM"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/event_cameraBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/circle"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:layout_gravity="bottom"
                />

        </LinearLayout>



    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

